# naskpass

./: .gitattributes  .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.debug  Makefile.in  README.md  aclocal.m4  autogen.sh  compile.sh  config.h  configure  configure.ac  luks_test.sh  main.c  status.c  ui.c  ui.h  ui_ani.c  ui_ani.h  ui_elements.c  ui_elements.h  ui_input.c  ui_input.h  ui_ipc.c  ui_ipc.h  ui_nwindow.c  ui_nwindow.h  ui_statusbar.c  ui_statusbar.h
debian/: README.Debian  README.source  changelog  control  copyright  naskpass.postinst  naskpass.postrm  naskpass.prerm  postinst  postrm  preinst  prerm  rules  templates
scripts/: naskconf  naskpass.initconf  naskpass.inithook  naskpass.initscript  naskpass.post  naskpass.pre  naskpass_debian.inithook  naskpass_debian.initscript  sshd_config
src/: Makefile.am  Makefile.in  aconfig.h.in  config.h  log.c  log.h  main.c  opt.c  opt.h  status.c  status.h  ui.c  ui.h  ui_ani.c  ui_ani.h  ui_elements.c  ui_elements.h  ui_input.c  ui_input.h  ui_ipc.c  ui_ipc.h  ui_nask.c  ui_nask.h  ui_nwindow.c  ui_statusbar.c  ui_statusbar.h  ui_txtwindow.c  ui_txtwindow.h  utils.c  utils.h
src/check/: check.c
src/shell/: shell.c
tests/: Makefile  consumer.c  ipctest.c  mqtest.c  ncurses.c  producer.c  producer_consumer.c  pthread.c  semconfig.h  semtest.c  semtest2.c  strsep.c
